<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/match_card_view"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:padding="10dp"
        android:stretchColumns="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow>

            <TextView
                android:text="@string/team_one"
                android:textColor="@color/colorBlack"
                android:layout_column="0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/show_team_one_text"
                android:layout_marginLeft="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/team_two"
                android:textColor="@color/colorBlack"
                android:layout_column="0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/show_team_two_text"
                android:layout_marginLeft="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/match_type"
                android:textColor="@color/colorBlack"
                android:layout_column="0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/show_match_type_text"
                android:layout_marginLeft="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/match_status"
                android:textColor="@color/colorBlack"
                android:layout_column="0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/show_match_status_text"
                android:layout_marginLeft="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/date"
                android:textColor="@color/colorBlack"
                android:layout_column="0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/show_date_text"
                android:layout_marginLeft="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </TableRow>

    </TableLayout>

</androidx.cardview.widget.CardView>