<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MatchDetailActivity">

    <androidx.cardview.widget.CardView
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableLayout
            android:padding="10dp"
            android:stretchColumns="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableRow>

                <TextView
                    android:text="@string/team_one"
                    android:textColor="@color/colorBlack"
                    android:layout_column="0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/match_detail_show_team_one_text"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/team_two"
                    android:textColor="@color/colorBlack"
                    android:layout_column="0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/match_detail_show_team_two_text"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/match_status"
                    android:textColor="@color/colorBlack"
                    android:layout_column="0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/match_detail_show_match_status_text"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/score"
                    android:textColor="@color/colorBlack"
                    android:layout_column="0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/match_detail_show_score_text"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/description"
                    android:textColor="@color/colorBlack"
                    android:layout_column="0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/match_detail_show_description_text"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/date"
                    android:textColor="@color/colorBlack"
                    android:layout_column="0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/match_detail_show_date_text"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </TableRow>

        </TableLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>