<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MatchSummaryActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <androidx.cardview.widget.CardView
            android:background="@color/colorWhite"
            app:cardUseCompatPadding="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="3dp"
            app:cardElevation="3dp"
            app:contentPadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/fielding_summary"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/field_team_1_title"
                    android:text="@string/team_one"
                    android:textSize="20sp"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/field_team_1_detail"
                    android:textColor="@color/colorBlack"
                    android:layout_marginTop="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/field_team_2_title"
                    android:text="@string/team_two"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/field_team_2_detail"
                    android:textColor="@color/colorBlack"
                    android:layout_marginTop="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:background="@color/colorWhite"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:cardElevation="3dp"
            app:contentPadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/bowling_summary"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/bowl_team_1_title"
                    android:text="@string/team_one"
                    android:layout_marginTop="8dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/bowl_team_1_detail"
                    android:textColor="@color/colorBlack"
                    android:layout_marginTop="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/bowl_team_2_title"
                    android:text="@string/team_two"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/bowl_team_2_detail"
                    android:textColor="@color/colorBlack"
                    android:layout_marginTop="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:background="@color/colorWhite"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:cardElevation="3dp"
            app:contentPadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/batting_summary"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/bat_team_1_title"
                    android:text="@string/team_one"
                    android:layout_marginTop="8dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/bat_team_1_detail"
                    android:textColor="@color/colorBlack"
                    android:layout_marginTop="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/bat_team_2_title"
                    android:text="@string/team_two"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/bat_team_2_detail"
                    android:textColor="@color/colorBlack"
                    android:layout_marginTop="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:background="@color/colorWhite"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:cardElevation="3dp"
            app:contentPadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/results"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/other_results_detail"
                    android:textColor="@color/colorBlack"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>